@@ -6,6 +6,7 @@ What's New for OpenJPEG
 + : added
 
 October 12, 2011
++ [mickael] WIP: add a read CBD marker function (JPEG2000 part 2)
 + [mickael] WIP: add a read MCO marker function (JPEG2000 part 2) 
 + [mickael] WIP: add a read MCC marker function (JPEG2000 part 2) 
 + [mickael] WIP: add a read MCT marker function (JPEG2000 part 2) 
